# essynth

./: CMakeLists.txt  LICENSE.md  README.md  main.cpp  module_test.cpp
src/core/: ESAudioInterface.cpp  ESAudioInterface.h  ESDataTypes.h  ESEngine.h  ESMidiInterface.cpp  ESMidiInterface.h  ESModule.h
src/gui/: CMakeLists.txt  ESConnectionUI.cpp  ESConnectionUI.h  ESConstValueTextUI.cpp  ESConstValueTextUI.h  ESConstValueUI.cpp  ESConstValueUI.h  ESDesignerScene.cpp  ESDesignerScene.h  ESMainWindowUI.cpp  ESMainWindowUI.h  ESMainWindowUI.ui  ESModuleUI.cpp  ESModuleUI.h  esdesignerview_ui.cpp  esdesignerview_ui.h  esmainwindow.ui  esmainwindow_ui.cpp  esmainwindow_ui.h  esmodule_ui.cpp  esmodule_ui.h
src/io/: ESIoPortAudio.cpp  ESIoPortAudio.h  ESIoPortMidi.cpp  ESIoPortMidi.h
src/modules/: ESModuleAddFloat.h  ESModuleAddInt.h  ESModuleAudioOut.h  ESModuleClock.h  ESModuleConstFloat.h  ESModuleConstInt.h  ESModuleCounter.h  ESModuleDivideFloat.h  ESModuleDivideInt.h  ESModuleEventDivider.h  ESModuleFloatToInt.h  ESModuleGate.h  ESModuleIntToFloat.h  ESModuleMidiEvent.h  ESModuleMidiNote.h  ESModuleMultiplyFloat.h  ESModuleMultiplyInt.h  ESModuleNoteToFreq.h  ESModuleOscillatorBase.h  ESModuleSawOsc.h  ESModuleSineOsc.h  ESModuleSquareOsc.h  ESModuleSubtractFloat.h  ESModuleSubtractInt.h  ESModuleTriangleOsc.h
